--- a/index.html
+++ b/index.html
@@ -305,6 +305,19 @@
             <!-- /.navbar-static-side -->
 		</nav>
 
+        <div id="page-wrapper">
+            <div class="row">
+                <div class="col-lg-12">
+                    <h1 class="page-header">Dashboard</h1>
+                </div>
+                <!-- /.col-lg-12 -->
+            </div>
+            <!-- /.row -->
+            <div class="row">
+                
+            </div>
+        </div>
+
 		<!-- jQuery -->
 		<script type="text/javascript" src="js/jquery-3.2.0.min.js"></script>
 
