--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
                                 </div>
                                 <div class="col-xs-9 text-right">
                                     <div class="huge">13</div>
-                                    <div>Support Tickets!</div>
+                                    <div>New Support Tickets!</div>
                                 </div>
                             </div>
                         </div>
