Add morris.js files

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
 
 		<!-- Custom CSS -->
 		<link rel="stylesheet" type="text/css" href="css/worklog.css">
+
+        <!-- Morris Charts CSS -->
+        <link rel="stylesheet" type="text/css" href="css/morris.css">
 		
 		<!-- Custom Fonts -->
 		<link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
@@ -143,7 +146,7 @@
                         <li class="divider"></li>
                         <li>
                             <a href="#">
-                                <div>
+                                <div>4
                                     <i class="fa fa-envelope fa-fw"></i> Message Sent
                                     <span class="pull-right text-muted small">4 minutes ago</span>
                                 </div>
@@ -415,6 +418,12 @@
 
         <!-- metis Menu Plugin JavaScript -->
         <script type="text/javascript" src="js/metisMenu.min.js"></script>
+
+        <!-- Morris Charts JavaScript -->
+        <script type="text/javascript" src="js/raphael.min.js"></script>
+        <script type="text/javascript" src="js/morris.min.js"></script>
+        <!-- TODO add data -->
+        <script type="text/javascript" src="js/data/morrisData.js"></script>
 
         <!-- Sidebar JavaScript -->
         <script type="text/javascript" src="js/sideBar.js"></script>
