--- a/index.html
+++ b/index.html
@@ -457,9 +457,7 @@
 
         <!-- Morris Charts JavaScript -->
         <script type="text/javascript" src="js/raphael.min.js"></script>
-        <script type="text/javascript" src="js/morris.min.js"></script>
-        <!-- TODO add data -->
-        <script type="text/javascript" src="js/data/morrisData.js"></script>
+        <script type="text/javascript" src="js/morris.min.js"></script>        <script type="text/javascript" src="js/data/morrisData.js"></script>
 
         <!-- Sidebar JavaScript -->
         <script type="text/javascript" src="js/sideBar.js"></script>
