Change user icon

--- a/index.html
+++ b/index.html
@@ -215,7 +215,12 @@
                             <!-- /input-group -->
                         </li>
                         <li>
-                            <a href="index.html"><i class="fa fa-dashboard fa-fw"></i> Dashboard</a>
+                            <a href="index.html"><i class="fa fa-dashboard fa-fw"></i> Dashboard<span class="fa arrow"></span></a>
+                            <ul class="nav nav-second-level">
+                                <li>
+                                    <a href=""></a>
+                                </li>
+                            </ul>
                         </li>
                         <li>
                             <a href="#"><i class="fa fa-question fa-fw"></i> Guides<span class="fa arrow"></span></a>
@@ -236,7 +241,7 @@
                             <!-- /.nav-second-level -->
                         </li>
                         <li>
-                            <a href="interns.html"><i class="fa fa-user-circle fa-fw"></i> Interns</a>
+                            <a href="interns.html"><i class="fa fa-vcard fa-fw"></i> Interns</a>
                         </li>
                         <li>
                             <a href="teachers.html"><i class="fa fa-users fa-fw"></i> Teachers</a>
