--- a/page-templates.html
+++ b/page-templates.html
@@ -236,7 +236,7 @@
                             <!-- /.nav-second-level -->
                         </li>
                         <li>
-                            <a href="interns.html"><i class="fa fa-user-circle fa-fw"></i> Interns</a>
+                            <a href="interns.html"><i class="fa fa-vcard fa-fw"></i> Interns</a>
                         </li>
                         <li>
                             <a href="teachers.html"><i class="fa fa-users fa-fw"></i> Teachers</a>
