--- a/index.html
+++ b/index.html
@@ -218,7 +218,15 @@
                             <a href="index.html"><i class="fa fa-dashboard fa-fw"></i> Dashboard<span class="fa arrow"></span></a>
                             <ul class="nav nav-second-level">
                                 <li>
-                                    <a href=""></a>
+                                    <a href="calendar.html">Calendar</a>
+                                </li>
+                                <li>
+                                    <a href="tasks.html">Tasks</a>
+                                </li>
+                                <li>
+                                    <a href="notifications.html">Notifications</a>
+                                </li>
+                                <li>
                                 </li>
                             </ul>
                         </li>
@@ -281,7 +289,7 @@
                                 </div>
                             </div>
                         </div>
-                        <a href="#">
+                        <a href="calendar.html">
                             <div class="panel-footer">
                                 <span class="pull-left">View Details</span>
                                 <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
@@ -303,7 +311,7 @@
                                 </div>
                             </div>
                         </div>
-                        <a href="#">
+                        <a href="tasks.html">
                             <div class="panel-footer">
                                 <span class="pull-left">View Details</span>
                                 <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
@@ -325,7 +333,7 @@
                                 </div>
                             </div>
                         </div>
-                        <a href="#">
+                        <a href="notifications.html">
                             <div class="panel-footer">
                                 <span class="pull-left">View Details</span>
                                 <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
@@ -347,7 +355,7 @@
                                 </div>
                             </div>
                         </div>
-                        <a href="#">
+                        <a href="tickets.html">
                             <div class="panel-footer">
                                 <span class="pull-left">View Details</span>
                                 <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
