Fix typo in sidebar list

--- a/index.html
+++ b/index.html
@@ -227,6 +227,7 @@
                                     <a href="notifications.html">Notifications</a>
                                 </li>
                                 <li>
+                                    <a href="tickets.html">Tickets</a>
                                 </li>
                             </ul>
                         </li>
