Add sidebar icons and change "tasks" to "projects"

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                             <a href="#">
                                 <div>
                                     <p>
-                                        <strong>Task 1</strong>
+                                        <strong>Project 1</strong>
                                         <span class="pull-right text-muted">40% Complete</span>
                                     </p>
                                     <div class="progress progress-striped active">
@@ -67,7 +67,7 @@
                             <a href="#">
                                 <div>
                                     <p>
-                                        <strong>Task 2</strong>
+                                        <strong>Project 2</strong>
                                         <span class="pull-right text-muted">20% Complete</span>
                                     </p>
                                     <div class="progress progress-striped active">
@@ -83,7 +83,7 @@
                             <a href="#">
                                 <div>
                                     <p>
-                                        <strong>Task 3</strong>
+                                        <strong>Project 3</strong>
                                         <span class="pull-right text-muted">60% Complete</span>
                                     </p>
                                     <div class="progress progress-striped active">
@@ -99,7 +99,7 @@
                             <a href="#">
                                 <div>
                                     <p>
-                                        <strong>Task 4</strong>
+                                        <strong>Project 4</strong>
                                         <span class="pull-right text-muted">80% Complete</span>
                                     </p>
                                     <div class="progress progress-striped active">
@@ -112,8 +112,8 @@
                         </li>
                         <li class="divider"></li>
                         <li>
-                            <a class="text-center" href="#">
-                                <strong>See All Tasks</strong>
+                            <a class="text-center" href="projects.html">
+                                <strong>See All Projects</strong>
                                 <i class="fa fa-angle-right"></i>
                             </a>
                         </li>
@@ -218,16 +218,16 @@
                             <a href="index.html"><i class="fa fa-dashboard fa-fw"></i> Dashboard<span class="fa arrow"></span></a>
                             <ul class="nav nav-second-level">
                                 <li>
-                                    <a href="calendar.html">Calendar</a>
+                                    <a href="calendar.html"><span class="fa fa-calendar fa-fw"></span> Calendar</a>
                                 </li>
                                 <li>
-                                    <a href="tasks.html">Tasks</a>
+                                    <a href="projects.html"><span class="fa fa-tasks fa-fw"></span> Projects</a>
                                 </li>
                                 <li>
-                                    <a href="notifications.html">Notifications</a>
+                                    <a href="notifications.html"><span class="fa fa-bell fa-fw"></span> Notifications</a>
                                 </li>
                                 <li>
-                                    <a href="tickets.html">Tickets</a>
+                                    <a href="tickets.html"><span class="fa fa-ticket fa-fw"></span> Tickets</a>
                                 </li>
                             </ul>
                         </li>
@@ -235,16 +235,16 @@
                             <a href="#"><i class="fa fa-question fa-fw"></i> Guides<span class="fa arrow"></span></a>
                             <ul class="nav nav-second-level">
                                 <li>
-                                    <a href="guide-configure-ipads.html">Configuring iPads</a>
+                                    <a href="guide-configure-ipads.html"><span class="fa fa-tablet fa-fw"></span> Configuring iPads</a>
                                 </li>
                                 <li>
-                                    <a href="guide-configure-printer.html">Configuring Printers</a>
+                                    <a href="guide-configure-printer.html"><span class="fa fa-print fa-fw"></span> Configuring Printers</a>
                                 </li>
                                 <li>
-                                    <a href="guide-reimage-mac.html">Reimage Mac</a>
+                                    <a href="guide-reimage-mac.html"><span class="fa fa-apple fa-fw"></span> Reimage Mac</a>
                                 </li>
                                 <li>
-                                    <a href="guide-reimage-windows.html">Reimage Windows</a>
+                                    <a href="guide-reimage-windows.html"><span class="fa fa-windows fa-fw"></span> Reimage Windows</a>
                                 </li>
                             </ul>
                             <!-- /.nav-second-level -->
@@ -308,11 +308,11 @@
                                 </div>
                                 <div class="col-xs-9 text-right">
                                     <div class="huge">12</div>
-                                    <div>New Tasks!</div>
+                                    <div>New Projects!</div>
                                 </div>
                             </div>
                         </div>
-                        <a href="tasks.html">
+                        <a href="projects.html">
                             <div class="panel-footer">
                                 <span class="pull-left">View Details</span>
                                 <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
@@ -348,7 +348,7 @@
                         <div class="panel-heading">
                             <div class="row">
                                 <div class="col-xs-3">
-                                    <i class="fa fa-support fa-5x"></i>
+                                    <i class="fa fa-ticket fa-5x"></i>
                                 </div>
                                 <div class="col-xs-9 text-right">
                                     <div class="huge">13</div>
