--- a/page-templates.html
+++ b/page-templates.html
@@ -254,7 +254,13 @@
             <!-- /.navbar-static-side -->
 		</nav>
         <div id="page-wrapper">
-
+            <div class="row">
+                <div class="col-lg-12">
+                    <h1 class="page-header">Dashboard</h1>
+                </div>
+                <!-- /.col-lg-12 -->
+            </div>
+            <!-- /.row -->
         </div>
         <!-- /.page-wrapper -->
 
